--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,18 +25,18 @@ set(LIBRARY_OUTPUT_PATH lib)
 # set include and lib folders
 if(UNIX)
 include_directories("/usr/lapack/include")
-include_directories("/home/sun/Projects/Aris/src/Aris_Control")
-include_directories("/home/sun/Projects/Aris/src/Aris_Core")
-include_directories("/home/sun/Projects/Aris/src/Aris_Plan")
-include_directories("/home/sun/Projects/Aris/src/Aris_DynKer")
-include_directories("/home/sun/Projects/Aris/src/Aris_ExpCal")
-include_directories("/home/sun/Projects/Aris/src")
+include_directories("/home/hex/Aris_with_force/src/Aris_Control")
+include_directories("/home/hex/Aris_with_force/src/Aris_Core")
+include_directories("/home/hex/Aris_with_force/src/Aris_Plan")
+include_directories("/home/hex/Aris_with_force/src/Aris_DynKer")
+include_directories("/home/hex/Aris_with_force/src/Aris_ExpCal")
+include_directories("/home/hex/Aris_with_force/src")
 
 include_directories("/usr/xenomai/include")
 include_directories("/opt/etherlab/include")
 include_directories("/usr/Robots/include")
 link_directories(/usr/lapack/lib)
-link_directories(/home/sun/Projects/Aris/build/lib)
+link_directories(/home/hex/Aris_with_force/build/lib)
 link_directories(/usr/xenomai/lib)
 link_directories(/opt/etherlab/lib)
 link_directories(/usr/Robots/lib)
@@ -69,5 +69,10 @@ set(SOURCE_FILES ArisControl.cpp VirtualBipedPlanner.cpp PushRecoveryPlanner.cpp
 PREPEND(FULL_SRC PRT ${SOURCE_FILES})
 add_executable(ArisControlPRT ${SOURCE_FILES})
 target_link_libraries(ArisControlPRT ${ROBOTS_LINK_LIBS} ${ARIS_LINK_LIBS} ${LAPACK_LINK_LIBS} ${ETHERLAB_LINK_LIBS} ${XENOMAI_LINK_LIBS} ${SYSTEM_LINK_LIBS})
+
+set(SOURCE_FILES ClientTerm.cpp Client.cpp) 
+PREPEND(FULL_SRC PRT ${SOURCE_FILES})
+add_executable(ClientPRT ${SOURCE_FILES})
+target_link_libraries(ClientPRT ${ROBOTS_LINK_LIBS} ${ARIS_LINK_LIBS} ${LAPACK_LINK_LIBS} ${ETHERLAB_LINK_LIBS} ${XENOMAI_LINK_LIBS} ${SYSTEM_LINK_LIBS})
 
 
