Calibrated the force sensor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ set(LIBRARY_OUTPUT_PATH lib)
 
 # set include and lib folders
 if(UNIX)
-    set(ARIS_SOURCE_LOCATION "/home/hex/Aris_back")
+    set(ARIS_SOURCE_LOCATION "/home/sun/Projects/Aris_back")
     include_directories("/usr/lapack/include")
     include_directories(${ARIS_SOURCE_LOCATION}/src/Aris_Control)
     include_directories(${ARIS_SOURCE_LOCATION}/src/Aris_Core)
@@ -79,5 +79,5 @@ target_link_libraries(ClientPRT ${ROBOTS_LINK_LIBS} ${ARIS_NORT_LINK_LIBS} ${LAP
 set(SOURCE_FILES ./LogDataReader.cpp)
 PREPEND(FULL_SRC PRT ${SOURCE_FILES})
 add_executable(LogDataReader ${SOURCE_FILES})
-target_link_libraries(LogDataReader ${ROBOTS_LINK_LIBS} ${ARIS_LINK_LIBS} ${LAPACK_LINK_LIBS} ${ETHERLAB_LINK_LIBS} ${XENOMAI_LINK_LIBS} ${SYSTEM_LINK_LIBS})
+target_link_libraries(LogDataReader ${ROBOTS_LINK_LIBS} ${ARIS_LINK_LIBS} ${LAPACK_LINK_LIBS}  ${SYSTEM_LINK_LIBS})
 
